[metadata]
author = Andrew Tedstone
name = gnssice
version = 0.3
description = Kinematic post-processing of GNSS data
keywords = GNSS
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/atedstone/gnssice/
download_url = https://github.com/atedstone/gnssice/

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
python_requires = >=3.10,<3.14
install_requires = 
    geopandas>=0.12.0
    matplotlib=3.*
    pandas>=1,<3
    numpy>=1,<2
    scipy=1.*
    pyarrow
    statsmodels
    click

[options.packages.find]
include = gnssice

[options.entry_points]
console_scripts = 
    calculate_local_origin = gnssice.calculate_local_origin:cli
    conc_daily_geod = gnssice.conc_daily_geod:cli
    get_ionex = gnssice.get_ionex:cli
    get_orbits = gnssice.gnss:get_orbits
    process_dgps = gnssice.process_dgps:cli
    process_rinex = gnssice.process_rinex:cli
    view_track_output = gnssice.gnss:view_track_output
    export_level1 = gnssice.export_level1:cli
    get_vmf3 = gnssice.get_vmf3:main
    splice_ionex = gnssice.splice_ionex:main
